--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
       <div class="indicator paragraph">
         <span>Uklon</span>
         <div class="div">
-          <input class="input" id="uklon-before" type="namber">
-          <input class="input" id="uklon-after" type="namber">
+          <input class="input" id="uklon-before" type="tel">
+          <input class="input" id="uklon-after" type="tel">
         </div>
       </div>
       <div class="indicator paragraph">
