--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
 
     <div class="paragraph">
       <span>Росход газа на 100 км.</span>
-      <input class="input" id="consumption" type="namber" value="12">
+      <input class="input" id="consumption" type="tel" value="12">
     </div>
     <div class="paragraph">
       <span>Цена за 1лтр газа</span>
-      <input class="input" id="gas-price" type="namber" value="18.10">
+      <input class="input" id="gas-price" type="tel" value="18.10">
     </div>
     <div class="paragraph">
       <span>Прогрев автомобиля</span>
-      <input class="input" id="Warming-up-the-car" type="namber" value="15">
+      <input class="input" id="Warming-up-the-car" type="tel" value="15">
     </div>
 
     <br>
@@ -43,35 +43,35 @@
       <div class="indicator paragraph">
         <span>Bolt</span>
         <div>
-          <input class="input" id="bolt-before" type="namber">
-          <input class="input" id="bolt-after" type="namber">
+          <input class="input" id="bolt-before" type="tel">
+          <input class="input" id="bolt-after" type="tel">
         </div>
       </div>
       <div class="indicator paragraph">
         <span>838</span>
         <div>
-          <input class="input" id="before838" type="namber">
-          <input class="input" id="after838" type="namber">
+          <input class="input" id="before838" type="tel">
+          <input class="input" id="after838" type="tel">
         </div>
       </div>
       <div class="indicator paragraph">
         <span>Розмен</span>
         <div>
-          <input class="input" id="cash-before" type="namber">
-          <input class="input" id="cash-after" type="namber">
+          <input class="input" id="cash-before" type="tel">
+          <input class="input" id="cash-after" type="tel">
         </div>
       </div>
       <div class="indicator paragraph acent-color">
         <span>Мили</span>
         <div>
-          <input class="input" id="before-mileage" type="namber">
-          <input class="input" id="after-mileage" type="namber">
+          <input class="input" id="before-mileage" type="tel">
+          <input class="input" id="after-mileage" type="tel">
         </div>
       </div>
       <div class="indicator paragraph acent-color">
         <span>Приват</span>
         <div>
-          <input class="input" id="privat" type="namber">
+          <input class="input" id="privat" type="tel">
         </div>
       </div>
     </div>
