--- a/index.html
+++ b/index.html
@@ -78,31 +78,12 @@
 
     <br>
 
-    <button class="button">Рассчитать</button>
+    <button class="button unselectable">Рассчитать</button>
     <span>Заработал:</span>
     <span id="earned">--</span>
     <span>грн.</span>
 
   </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 <script src="script.js"></script>
 </body>
