--- a/index.html
+++ b/index.html
@@ -36,36 +36,36 @@
       <div class="indicator paragraph">
         <span>Uklon</span>
         <div class="div">
-          <input class="input" id="uklon-before" type="tel">
-          <input class="input" id="uklon-after" type="tel">
+          <input class="input" id="uklon-before" type="tel" placeholder="До работы">
+          <input class="input" id="uklon-after" type="tel" placeholder="После">
         </div>
       </div>
       <div class="indicator paragraph">
         <span>Bolt</span>
         <div>
-          <input class="input" id="bolt-before" type="tel">
-          <input class="input" id="bolt-after" type="tel">
+          <input class="input" id="bolt-before" type="tel" placeholder="До работы">
+          <input class="input" id="bolt-after" type="tel" placeholder="После">
         </div>
       </div>
       <div class="indicator paragraph">
         <span>838</span>
         <div>
-          <input class="input" id="before838" type="tel">
-          <input class="input" id="after838" type="tel">
+          <input class="input" id="before838" type="tel" placeholder="До работы">
+          <input class="input" id="after838" type="tel" placeholder="После">
         </div>
       </div>
       <div class="indicator paragraph">
         <span>Розмен</span>
         <div>
-          <input class="input" id="cash-before" type="tel">
-          <input class="input" id="cash-after" type="tel">
+          <input class="input" id="cash-before" type="tel" placeholder="До работы">
+          <input class="input" id="cash-after" type="tel" placeholder="После">
         </div>
       </div>
       <div class="indicator paragraph acent-color">
         <span>Мили</span>
         <div>
-          <input class="input" id="before-mileage" type="tel">
-          <input class="input" id="after-mileage" type="tel">
+          <input class="input" id="before-mileage" type="tel" placeholder="До работы">
+          <input class="input" id="after-mileage" type="tel" placeholder="После">
         </div>
       </div>
       <div class="indicator paragraph acent-color">
