--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           </div>
         </div>
 
-        <div class="indicator paragraph">
+        <div class="indicator paragraph accent-background">
           <span>Проехал миль</span>
           <div>
             <input class="input" id="idMileage" type="tel" placeholder="Всего">
