--- a/index.html
+++ b/index.html
@@ -72,13 +72,6 @@
           </div>
         </div>
 
-        <div class="indicator paragraph accent-background">
-          <span>Проехал миль</span>
-          <div>
-            <input class="input" id="idMileage" type="tel" placeholder="Всего">
-          </div>
-        </div>
-
         <div class="indicator paragraph">
           <span>Наличка</span>
           <div>
@@ -86,12 +79,20 @@
           </div>
         </div>
 
-        <div class="indicator paragraph margin-bottom-0">
+        <div class="indicator paragraph">
           <span>Приват</span>
           <div>
             <input class="input" id="privat" type="tel">
           </div>
         </div>
+
+        <div class="indicator paragraph accent-background margin-bottom-0">
+          <span>Проехал миль</span>
+          <div>
+            <input class="input" id="idMileage" type="tel" placeholder="Всего">
+          </div>
+        </div>
+
       </div>
     </div>
 
@@ -100,7 +101,7 @@
     <button class="button" id="button">Рассчитать</button>
     <span>Заработал:</span>
     <span id="earned" class="acent">--</span>
-    <span>грн.</span>
+    <span id="earnedPosition">грн.</span>
 
   </div>
 
